--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Calculator By Amit</title>
 </head>
 <body>
@@ -32,6 +32,6 @@
             </div>
         </fieldset>
     </form>
-    <script src="script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
